              You should use "creme.creme_core.backends.xlsx_import.XLSXImportBackend" instead.
    # In global search, forbidden models are not proposed anymore.
    # The button menu has been reworked; it can now be reloaded dynamically
      (e.g. some buttons reloaded the whole page in order to be hidden -- or change their label -- once they did their job).
    # Drop JQPlot compatibility
    # Apps :
        * Creme_config :
            - The bricks configuration of a role can be cloned from the configuration of another role.
        * Activities :
            - The JavaScript component FullCalendar has been upgraded to the version "5.11.4" :
                - New calendar look-n-feel.
                - Week/month view changes are now in browsing history ; after a refreshing you will stay on the same view.
                - Collisions between events from the same calendar are forbidden.
            - A configuration system for the calendar view has been added :
                - Default view can be "month" or "week".
                - Which days are active.
                - What hour range to use.
                - ...
            - The configuration block for Calendars has been improved.
        * Persons :
            - The staff users are not related to Contacts anymore.
              Note: the existing Contacts which were related to staff users are sent to the trash.
            - A button to transform a Contact into a user has been added.
       * Assistants :
            - The UserMessages produce now notifications (so users can chose to be notified in their browser, emails are not the only way anymore).
       * Billing :
            - You can now define the default statuses (which are notably used as initial values in creation forms).
              You can also define the Invoice status to use when a number ins generated.
        * Reports :
            - You can now create filters which are reserved to Reports.